--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,7 +1,2 @@
-.box {
-  background-color: red; }
-  .box:hover {
-    width: 10px;
-    background-color: #00cc99; }
-
+.box{background-color:red}.box:hover{width:10px;background-color:#0c9}
 /*# sourceMappingURL=all.css.map */
