--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,11 +1,2 @@
-.box {
-  background-color: blue;
-  width: 200px;
-  height: 200px;
-  -webkit-transition: all 1s;
-  -o-transition: all 1s;
-  transition: all 1s; }
-  .box:hover {
-    background-color: #00cc99; }
-
+.box{background-color:blue;width:200px;height:200px;transition:all 1s}.box:hover{background-color:#0c9}
 /*# sourceMappingURL=all.css.map */
